--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<html xmlns:th="https://www.thymeleaf.org" replace="~{fragments/layout :: layout (~{::body},'accueil')}">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 
   <body>
 
-    <h2 text="#{welcome}">Bonjour CEFIM</h2>
+    <h2 text="#{welcome}">Bonjour Gwen</h2>
     <div class="row">
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
