--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,7 +4,7 @@
 
   <body>
 
-    <h2 text="#{welcome}">Bonjour Gwen</h2>
+    <h2 text="#{welcome}">Bonjour Gwénaëlle</h2>
     <div class="row">
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
